EXTRA_DIST= \
	accesspoint1.tao \
	accesspoint2.tao \
	bow.tao \
	circle.tao \
	circle2.tao \
	connector.tao \
	damp.tao \
	diffraction.tao \
	ellipse.tao \
	ellipse2.tao \
	hammer.tao \
	lock.tao \
	outputarray.tao \
	outputs.tao \
	pitches.tao \
	rectangle.tao \
	rectangle2.tao \
	stop.tao \
	string.tao \
	test.tao


