EXTRA_DIST=\
    Tao.h \
    TaoAccessPoint.h \
    TaoBow.h \
    TaoCell.h \
    TaoCircle.h \
    TaoConnector.h \
    TaoDevice.h \
    TaoEllipse.h \
    TaoGraphicsEngine.h \
    TaoHammer.h \
    TaoInstrument.h \
    TaoOutput.h \
    TaoPitch.h \
    TaoRGBColor.h \
    TaoRectangle.h \
    TaoStop.h \
    TaoString.h \
    TaoSynthEngine.h \
    TaoTriangle.h \
    taodefs.h
