## Process this file with automake to produce Makefile,in

INCLUDES = -I@top_srcdir@/include

lib_LTLIBRARIES = libtao.la

libtao_la_SOURCES = \
          Tao.cc \
          TaoGraphicsEngine.cc \
          TaoSynthEngine.cc \
          TaoAccessPoint.cc \
          TaoInstrument.cc \
          TaoString.cc \
          TaoRectangle.cc \
          TaoCircle.cc \
          TaoTriangle.cc \
          TaoEllipse.cc \
          TaoDevice.cc \
          TaoBow.cc \
          TaoHammer.cc \
          TaoConnector.cc \
          TaoStop.cc \
          TaoOutput.cc \
          TaoPitch.cc \
          TaoCell.cc
