HTMLFILES = \
	UserManual.html \
	UserManual_1.html \
	UserManual_10.html \
	UserManual_100.html \
	UserManual_101.html \
	UserManual_102.html \
	UserManual_103.html \
	UserManual_104.html \
	UserManual_105.html \
	UserManual_106.html \
	UserManual_107.html \
	UserManual_108.html \
	UserManual_109.html \
	UserManual_11.html \
	UserManual_110.html \
	UserManual_111.html \
	UserManual_112.html \
	UserManual_113.html \
	UserManual_114.html \
	UserManual_115.html \
	UserManual_116.html \
	UserManual_117.html \
	UserManual_118.html \
	UserManual_119.html \
	UserManual_12.html \
	UserManual_120.html \
	UserManual_121.html \
	UserManual_122.html \
	UserManual_123.html \
	UserManual_124.html \
	UserManual_125.html \
	UserManual_126.html \
	UserManual_127.html \
	UserManual_128.html \
	UserManual_129.html \
	UserManual_13.html \
	UserManual_130.html \
	UserManual_131.html \
	UserManual_132.html \
	UserManual_133.html \
	UserManual_134.html \
	UserManual_135.html \
	UserManual_136.html \
	UserManual_137.html \
	UserManual_138.html \
	UserManual_139.html \
	UserManual_140.html \
	UserManual_141.html \
	UserManual_142.html \
	UserManual_143.html \
	UserManual_144.html \
	UserManual_145.html \
	UserManual_146.html \
	UserManual_147.html \
	UserManual_148.html \
	UserManual_149.html \
	UserManual_150.html \
	UserManual_151.html \
	UserManual_152.html \
	UserManual_153.html \
	UserManual_154.html \
	UserManual_155.html \
	UserManual_156.html \
	UserManual_14.html \
	UserManual_15.html \
	UserManual_16.html \
	UserManual_17.html \
	UserManual_18.html \
	UserManual_19.html \
	UserManual_2.html \
	UserManual_20.html \
	UserManual_21.html \
	UserManual_22.html \
	UserManual_23.html \
	UserManual_24.html \
	UserManual_25.html \
	UserManual_26.html \
	UserManual_27.html \
	UserManual_28.html \
	UserManual_29.html \
	UserManual_3.html \
	UserManual_30.html \
	UserManual_31.html \
	UserManual_32.html \
	UserManual_33.html \
	UserManual_34.html \
	UserManual_35.html \
	UserManual_36.html \
	UserManual_37.html \
	UserManual_38.html \
	UserManual_39.html \
	UserManual_4.html \
	UserManual_40.html \
	UserManual_41.html \
	UserManual_42.html \
	UserManual_43.html \
	UserManual_44.html \
	UserManual_45.html \
	UserManual_46.html \
	UserManual_47.html \
	UserManual_48.html \
	UserManual_49.html \
	UserManual_5.html \
	UserManual_50.html \
	UserManual_51.html \
	UserManual_52.html \
	UserManual_53.html \
	UserManual_54.html \
	UserManual_55.html \
	UserManual_56.html \
	UserManual_57.html \
	UserManual_58.html \
	UserManual_59.html \
	UserManual_6.html \
	UserManual_60.html \
	UserManual_61.html \
	UserManual_62.html \
	UserManual_63.html \
	UserManual_64.html \
	UserManual_65.html \
	UserManual_66.html \
	UserManual_67.html \
	UserManual_68.html \
	UserManual_69.html \
	UserManual_7.html \
	UserManual_70.html \
	UserManual_71.html \
	UserManual_72.html \
	UserManual_73.html \
	UserManual_74.html \
	UserManual_75.html \
	UserManual_76.html \
	UserManual_77.html \
	UserManual_78.html \
	UserManual_79.html \
	UserManual_8.html \
	UserManual_80.html \
	UserManual_81.html \
	UserManual_82.html \
	UserManual_83.html \
	UserManual_84.html \
	UserManual_85.html \
	UserManual_86.html \
	UserManual_87.html \
	UserManual_88.html \
	UserManual_89.html \
	UserManual_9.html \
	UserManual_90.html \
	UserManual_91.html \
	UserManual_92.html \
	UserManual_93.html \
	UserManual_94.html \
	UserManual_95.html \
	UserManual_96.html \
	UserManual_97.html \
	UserManual_98.html \
	UserManual_99.html

EXTRA_DIST = ${HTMLFILES} \
	back.gif \
	bg.gif \
	cells.gif \
	circle_example.gif \
	circle_waves.gif \
	compound_example.gif \
	forward.gif \
	instrument_coord_system.gif \
	joining.gif \
	new.gif \
	trans1x1.gif \
	up.gif \
	xandyfreqs.gif

MAINTAINERCLEANFILES = ${HTMLFILES}

UserManual.html: ../UserManual.tex
	cd .. && $(MAKE) html
